[gd_scene load_steps=5 format=3 uid="uid://cvqqb6q1d8vtg"]

[ext_resource type="PackedScene" uid="uid://d2d1md6i3po2n" path="res://scenes/block_schema/block/block.tscn" id="1_3gfir"]
[ext_resource type="Script" path="res://scenes/block_schema/block/block_if/block_if.gd" id="2_1oe4o"]
[ext_resource type="PackedScene" uid="uid://sdm7fyk8ggig" path="res://scenes/block_schema/block/block_link/begin_point.tscn" id="2_mneu6"]
[ext_resource type="PackedScene" uid="uid://dobi4gaiuyt0s" path="res://scenes/block_schema/block/block_link/end_point.tscn" id="3_bftli"]

[node name="BlockIf" instance=ExtResource("1_3gfir")]
offset_left = -75.0
offset_right = 75.0
script = ExtResource("2_1oe4o")

[node name="XContainer" type="HBoxContainer" parent="VBoxContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/XContainer" index="0"]
layout_mode = 2
text = "X"

[node name="XSpinBox" type="SpinBox" parent="VBoxContainer/XContainer" index="1"]
layout_mode = 2
min_value = -1.0
max_value = 1.0

[node name="YContainer" type="HBoxContainer" parent="VBoxContainer" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/YContainer" index="0"]
layout_mode = 2
text = "Y"

[node name="YSpinBox" type="SpinBox" parent="VBoxContainer/YContainer" index="1"]
layout_mode = 2
min_value = -1.0
max_value = 1.0

[node name="Distance container" type="HBoxContainer" parent="VBoxContainer" index="3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Distance container" index="0"]
layout_mode = 2
text = "Dist"

[node name="DistanceSpinBox" type="SpinBox" parent="VBoxContainer/Distance container" index="1"]
layout_mode = 2
min_value = 1.0
max_value = 1.0
value = 1.0
allow_greater = true

[node name="BeginPoint" parent="BeginPoints" index="0" instance=ExtResource("2_mneu6")]
position = Vector2(110, 150)
point_type = 1

[node name="BeginPoint2" parent="BeginPoints" index="1" instance=ExtResource("2_mneu6")]
position = Vector2(40, 150)
point_type = 2

[node name="EndPoint" parent="EndPoints" index="0" instance=ExtResource("3_bftli")]
position = Vector2(76, 0)
